<resources>
    <string name="app_name">S.O.S.</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="warning">warning</string>
    <string name="alarm">alarm</string>
    <string name="urgent">urgent</string>
    <string name="warningLevel">Level of Emergency</string>
    <string name="conctactPicker">Choose Contact</string>
    <string name="contact1">First Contact</string>
    <string name="contact2">Second Contact</string>
    <string name="contact3">Third Contact</string>
    <string name="sos">SEND SMS</string>
    <string name="title_activity_setting">Settings</string>
</resources>